examples/simple/klee/klee-out-0/test000003.pc
array x[4] : w32 -> w8 = symbolic
array y[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Sle N0:(Add w32 N1:(ReadLSB w32 0 x)
                              N2:(ReadLSB w32 0 y))
                  0))
         (Eq false (Slt 9999 N1))
         (Eq false (Slt 9999 N2))
         (Slt (Mul w32 2 N0) 4294967295)]
        false)
